Update Dockerfile, adjust resources